# mystic-agent

./: .gitignore  LICENSE  README.md  SECURITY.md  install.sh
core/: pyproject.toml
core/mystic_agent/: agent.py  automations.py  branding.py  cli.py  config.py  db.py  email_tools.py  flags.py  forge.py  llm.py  permissions.py  personas.py  sandbox.py  server.py  setup_wizard.py  skills_loader.py  splash.py  telephony.py  tools.py  transcription.py  wallet.py  wizard_ui.py
core/mystic_agent/dashboard/: index.html
core/mystic_agent/gateways/: telegram.py
core/tests/: test_core.py
site/: package-lock.json  package.json
site/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/src/components/site/: copy-command.tsx  decision-demo.tsx  hero-intro.tsx  hero.tsx  navbar.tsx  pillars.tsx  reveal.tsx  scroll-hero.tsx  sections.tsx  tabs.tsx  terminal.tsx
site/src/components/ui/: bento-grid.tsx
site/src/config/: site.ts
