[project]
name = "mystic-agent"
version = "0.1.0"
description = "Your open-source Jarvis. Self-hosted, autonomous, accountable."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.4",
    "python-telegram-bot>=21.6",
    "anthropic>=0.40",
    "openai>=1.50",
    "cryptography>=43.0",
    "rich>=13.8",
    "pyfiglet>=1.0",
    "click>=8.1",
    "httpx>=0.27",
    "pypdf>=5.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27"]
browser = ["playwright>=1.47"]

[project.scripts]
mystic-agent = "mystic_agent.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mystic_agent*"]

[tool.setuptools.package-data]
mystic_agent = ["dashboard/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
